# platformly.io

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  package.json  pnpm-lock.yaml
.archon/: README.md  config.yaml
.archon/workflows/: platformly-idea-to-pr.yaml  platformly-plannotator-piv.yaml
.claude/: settings.json
.claude/agents/: blog-writer.md  code-reviewer.md  code-simplifier.md  codebase-analyst.md  codebase-explorer.md  pr-test-analyzer.md  rust-safety-auditor.md  silent-failure-hunter.md  sync-api-contract-checker.md  tauri-ipc-checker.md  web-researcher.md
.claude/archon/: README.md
.claude/commands/: blog-draft.md  cross-review.md  review-pr.md  triage-review.md
.claude/skills/archon-dev/: SKILL.md
.claude/skills/archon-dev/cookbooks/: commit.md  debug.md  implement.md  investigate.md  issue.md  plan.md  pr.md  prd.md  research.md  review.md
.github/ISSUE_TEMPLATE/: ai-ready.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  nav.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/content/: posts.ts
apps/web/lib/: site.ts
docs/: COMPETITIVE-LANDSCAPE.md
scripts/: gen-placeholder-icon.mjs  w.sh  worktree-setup.sh  worktree-teardown.sh  wt-list.sh
scripts/lib/: ports.sh
(+12 files in other folders)
