[package]
name = "platformly"
version = "0.0.0"
description = "platformly desktop — the ultimate Kubernetes manager"
authors = ["platformly.io"]
edition = "2021"
rust-version = "1.77.2"

# The library powers both the desktop binary and (future) mobile/tests.
[lib]
name = "platformly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
